--- a/app/views/fisica/campoelectrico.html.erb
+++ b/app/views/fisica/campoelectrico.html.erb
@@ -26,7 +26,7 @@
 </div>
 <!-- KONVA -->
 <div class="btn-group menu2" role="group">
-  <button type="button" onclick="start()" class="btn btn-default">Start</button>
+  <button type="button" onclick="start()" class="btn btn-default" id="btnStart">Start</button>
   <button type="button" onclick="movePointI()" class="btn btn-default">◄ Move point left</button>
   <button type="button" onclick="movePointR()" class="btn btn-default">Move point right ►</button>
   <button type="button" onclick="movePointTo()" class="btn btn-default">Move point to</button>
@@ -48,7 +48,7 @@
 
         let stage = new Konva.Stage({
             container: 'container2',   // id of container <div>
-            width: 1000,
+            width: 1200,
             height: 500
         });
         let layer = new Konva.Layer();
@@ -70,11 +70,11 @@
         }
 
         for (let i = 0; i < 500; i = i + 10) {
-            addline(0, i, 1000, i, 0.8, 'gray');
+            addline(0, i, 1200, i, 0.8, 'gray');
             layer.draw();
         }
 
-        for (let i = 0; i < 1000; i = i + 10) {
+        for (let i = 0; i < 1200; i = i + 10) {
             addline(i, 0, i, 500, 0.8, 'gray');
             layer.draw();
         }
@@ -86,7 +86,7 @@
         });
 
         //Create xAxis
-        for (let i = 50; i < 1000; i += 30) {
+        for (let i = 50; i < 1200; i += 30) {
             var valueX = new Konva.Label({
                 x: i,
                 y: 260,
@@ -107,7 +107,7 @@
         }
 
         let Linex = new Konva.Line({
-            points: [0, 250, 1000, 250],
+            points: [0, 250, 1200, 250],
             stroke: 'black',
             strokeWidth: 4
             // dash: [30, 10]
@@ -125,33 +125,42 @@
         layer.draw();
 
         function movePointR() {
+            document.getElementById("btnStart").disabled = false;
             if (E !== null) E.hide();
             if (magnitude !== null) magnitude.hide();
 
-            if(point.x()  < 1000) {
+            if (point.x() < 1195) {
                 point.x((point.x() + 5));
                 layer.draw();
             }
         }
         function movePointI() {
+            document.getElementById("btnStart").disabled = false;
             if (E !== null) E.hide();
             if (magnitude !== null) magnitude.hide();
 
-            if(point.x() > 50) {
+            if (point.x() >= 55) {
                 point.x((point.x() - 5));
                 layer.draw();
             }
 
         }
         function  movePointTo(x) {
+            document.getElementById("btnStart").disabled = false;
             if (E !== null) E.hide();
             if (magnitude !== null) magnitude.hide();
 
             let input = prompt("x position: ", "");
             if (input !== null) {
                 try {
-                    let xpos = parseFloat(input);
-                    point.x(xpos + 50);
+                    let xpos = parseInt(input);
+                    if (xpos == 0) {
+                        point.x(xpos + 50);
+                    }
+                    else {
+                        point.x(xpos + 60);
+                    }
+
                     layer.draw();
                 }
                 catch (e) {
@@ -162,6 +171,13 @@
         function start() { //Generar el campo electrico
 
             let xdist = point.x() - 50;
+            if (xdist < 5) {
+                try {
+                    xdist = parseInt(xdist);
+                } catch (e) {
+                    window.alert("DEBUG: No se pudo convertir float to int. start()");
+                }
+            }
 
             let dq = Q / (hf - hi);
             let deMag = 0.0;
@@ -262,6 +278,8 @@
             //window.alert(campoE[0]*400);
             layer.add(E);
             layer.draw();
+
+            document.getElementById("btnStart").disabled = true;
 
         }
 
