Circuito electrico empezado

--- a/app/views/fisica/campoelectrico.html.erb
+++ b/app/views/fisica/campoelectrico.html.erb
@@ -264,7 +264,7 @@
                 fill: 'white'
             }));
             magnitude.add(new Konva.Text({
-                text: "E",
+                text: "E" + "\n" + "|E| = " + (campoE[0] * 100).toFixed(4).toString(),
                 fontFamily: 'Calibri',
                 fontSize: 18,
                 padding: 2,
