--- a/app/assets/stylesheets/fisica.scss
+++ b/app/assets/stylesheets/fisica.scss
@@ -29,6 +29,15 @@
 
 }
 
+#container3 {
+  background-color: white;
+  width: 1000px;
+  height: 500px;
+  margin-left: 20px;
+  border: 5px solid black;
+
+}
+
 
 /* MENU  */
 #menu {
