--- a/app/views/fisica/campoelectrico.html.erb
+++ b/app/views/fisica/campoelectrico.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Campo electrico debido cargas en linea infinita", fisica_campoelectrico_path %>
           <!-- <li><a href="/fisica/campoelectrico">Campo electrico debido cargas en linea infinita</a></li> -->
         </li>
-        <li><%= link_to "Circuitos eléctricos", fisica_circuitos_path %></li>
+        <li><%= link_to "Campo magnético", fisica_magnetico_path %></li>
       </ul>
     </div>
   </nav>
