--- a/app/assets/stylesheets/fisica.scss
+++ b/app/assets/stylesheets/fisica.scss
@@ -129,3 +129,13 @@
   margin-bottom: 8px;
   display: none;
 }
+
+/*CAMPO MAGNETICO*/
+#container4 {
+  background-color: white;
+  width: 1200px;
+  height: 500px;
+  margin-left: 20px;
+  border: 5px solid black;
+
+}
