--- a/app/views/fisica/magnetico.erb
+++ b/app/views/fisica/magnetico.erb
@@ -86,7 +86,7 @@
       /* ANIMACIN PARTICULA */
       let anim = new Konva.Animation(function (frame) {
 
-          part.getPart().x(part.getPart().x() + 1);
+          part.getPart().x(part.getPart().x() + 1); //Prueba
 
           /*** CURVAR SI ENTRA EN EL CAMPO MAGNETICO */
 
