--- a/app/views/fisica/magnetico.erb
+++ b/app/views/fisica/magnetico.erb
@@ -59,8 +59,8 @@
 
           constructor() {
               this.particle = new Konva.Circle({
-                  x: 250,
-                  y: 250,
+                  x: 150,
+                  y: 350,
                   radius: 12,
                   fill: 'red',
                   draggable: true
@@ -102,9 +102,11 @@
 
           if ((part.getPart().x() >= xi && part.getPart().x() <= xf) && (part.getPart().y() >= yi && part.getPart().y() <= yf)) {
               //Esta en el campo magnetico
+              anim.stop();
           }
           else {
               //no lo esta
+              anim.start();
           }
 
           layer.draw();
