--- a/app/views/fisica/magnetico.erb
+++ b/app/views/fisica/magnetico.erb
@@ -65,11 +65,16 @@
                   fill: 'red',
                   draggable: true
               });
-              this.velocity = [15, 0];
+              this.velocity = [0.5, 0];
+
           }
 
           getPart() {
               return this.particle;
+          }
+
+          getSpeed() {
+              return this.velocity;
           }
 
           //Dibujar
@@ -92,7 +97,7 @@
       /* ANIMACIN PARTICULA */
       let anim = new Konva.Animation(function (frame) {
 
-          part.getPart().x(part.getPart().x() + 1); //Prueba
+          part.getPart().x(part.getPart().x() + part.getSpeed()[0]); //Prueba
 
           /*** CURVAR SI ENTRA EN EL CAMPO MAGNETICO */
           let xi = label.x();
@@ -102,11 +107,11 @@
 
           if ((part.getPart().x() >= xi && part.getPart().x() <= xf) && (part.getPart().y() >= yi && part.getPart().y() <= yf)) {
               //Esta en el campo magnetico
-              anim.stop();
+              part.getPart().x(part.getPart().x() + (part.getSpeed()[0] + 2)); //Prueba
           }
           else {
               //no lo esta
-              anim.start();
+              part.getPart().x(part.getPart().x() + part.getSpeed()[0]); //Prueba
           }
 
           layer.draw();
