--- a/app/views/fisica/authors.html.erb
+++ b/app/views/fisica/authors.html.erb
@@ -4,16 +4,13 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/fisica/authors">PROYECTO FINAL FISICA III</a>
+        <a class="navbar-brand" href="/">PROYECTO FINAL FISICA III</a>
         <!-- <a class="navbar-brand" href="/fisica/authors">PROYECTO FINAL FISICA III</a> -->
       </div>
       <ul class="nav navbar-nav">
-        <li><%= link_to "Interaccion entre cargas electricas", fisica_index_path %></li>
-        <li>
-          <%= link_to "Campo electrico debido cargas en linea infinita", fisica_campoelectrico_path %>
-          <!-- <li><a href="/fisica/campoelectrico">Campo electrico debido cargas en linea infinita</a></li> -->
-        </li>
-        <li><%= link_to "Campo magnético", fisica_magnetico_path %></li>
+        <li><a onclick="location.href='/fisica/index'">Interacciones entre cargas</a></li>
+        <li><a onclick="location.href='/fisica/campoelectrico'">Campo electrico debido cargas en linea infinita</a></li>
+        <li><a onclick="location.href='/fisica/magnetico'">Campo magnético</a></li>
       </ul>
     </div>
   </nav>
