--- a/app/views/fisica/index.html.erb
+++ b/app/views/fisica/index.html.erb
@@ -4,23 +4,22 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/fisica/authors">PROYECTO FINAL FISICA III</a>
+        <a class="navbar-brand" href="/">PROYECTO FINAL FISICA III</a>
         <!-- <a class="navbar-brand" href="/fisica/authors">PROYECTO FINAL FISICA III</a> -->
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to "Interaccion entre cargas electricas", fisica_index_path %></li>
-        <li>
-          <%= link_to "Campo electrico debido cargas en linea infinita", fisica_campoelectrico_path %>
-          <!-- <li><a href="/fisica/campoelectrico">Campo electrico debido cargas en linea infinita</a></li> -->
-        </li>
-        <li><%= link_to "Campo magnético", fisica_magnetico_path %></li>
+        <li class="active"><a onclick="location.href='/fisica/index'">Interacciones entre cargas</a></li>
+        <li><a onclick="location.href='/fisica/campoelectrico'">Campo electrico debido cargas en linea infinita</a></li>
+        <li><a onclick="location.href='/fisica/magnetico'">Campo magnético</a></li>
       </ul>
     </div>
   </nav>
 </div>
 <!-- END MENU -->
 <div class="page-header" align="left">
-  <h1><small>Interacción entre cargas eléctricas</small></h1>
+  <h1>
+    <small>Interacción entre cargas eléctricas</small>
+  </h1>
 </div>
 <br>
 <div class="big-box"> <!-- Open Big box -->
@@ -28,10 +27,18 @@
   <div class="parent">
     <div id="menu">
       <ul class="nav nav-pills nav-stacked">
-        <li><button onclick="addCharge()">Agregar carga</button></li>
-        <li><button>Remover carga</button></li>
-        <li><button>Modificar carga</button></li>
-        <li><button onclick="start()">Animar cargas</button></li>
+        <li>
+          <button onclick="addCharge()">Agregar carga</button>
+        </li>
+        <li>
+          <button>Remover carga</button>
+        </li>
+        <li>
+          <button>Modificar carga</button>
+        </li>
+        <li>
+          <button onclick="start()">Animar cargas</button>
+        </li>
       </ul>
     </div>
 
@@ -42,25 +49,30 @@
 
   <script type="text/javascript">
 
-      //Global stage and layer ---------------------------------------------------------------
-      //Create the stage
-      var stage = new Konva.Stage({
-          container: 'container',   // id of container <div>
-          width: 1000,
-          height: 500
-      });
+      //Global stage_01 and layer ---------------------------------------------------------------
+      //Create the stage_01
+
+      let stage_01;
+
+      if (typeof stage_01 === 'undefined') {
+          // the variable is defined
+          stage_01 = new Konva.Stage({
+              container: 'container',   // id of container <div>
+              width: 1000,
+              height: 500
+          });
+      }
       //Create the layer
-      var layer = new Konva.Layer(); //Layer to use
-      var cargas = []; //Almacenar los protones y los electrones en este arreglo de cargas
-      var anims = []; //Aniamciones de las cargas creadas
-      var cant_cargas = 0; //contar la cantidad de cargas que se han ido agregando
-      var cant_protones = 0; //contar la cantidad de protones
-      var cant_electrones = 0; //contar la cantidad de electronesq1 = cargas[0].getCarga();
+      let layer = new Konva.Layer(); //Layer to use
+      let cargas = []; //Almacenar los protones y los electrones en este arreglo de cargas
+      let cant_cargas = 0; //contar la cantidad de cargas que se han ido agregando
+      let cant_protones = 0; //contar la cantidad de protones
+      let cant_electrones = 0; //contar la cantidad de electronesq1 = cargas[0].getCarga();
 
       const K = 0.0009;
 
       // ---------------------------------------------------------------------------------------
-      stage.add(layer);
+      stage_01.add(layer);
       /*
        *    CLASE PROTON
        */
@@ -475,7 +487,7 @@
 
       function addCharge() {
           let input = prompt("Magnitud: ", "");
-          if (input != null) {
+          if (input !== null) {
               try {
                   let magnitud = parseFloat(input);
                   let ob = null;
