--- a/app/views/fisica/magnetico.erb
+++ b/app/views/fisica/magnetico.erb
@@ -44,9 +44,10 @@
       let Bdir = "cruz"; //Hacia dentro de la pantalla. "punto", hacia fuera de la pantalla.
       let Fm = [0, 0]; //Fuerza magnetica
 
+
       let label = new Konva.Label({
-          x: 180,
-          y: 150,
+          x: 380,
+          y: 200,
           opacity: 0.75,
           draggable: true,
       });
@@ -60,7 +61,7 @@
           constructor() {
               this.particle = new Konva.Circle({
                   x: 150,
-                  y: 350,
+                  y: 250,
                   radius: 12,
                   fill: 'red',
                   draggable: true
@@ -85,7 +86,6 @@
               return this.velocity;
           }
 
-
           //Dibujar
           draw() {
               layer.add(this.particle);
@@ -103,16 +103,15 @@
       let part = new Particle();
       part.draw();
 
-      let puntos = [part.getPart().x(), part.getPart().y()];
+      //      let puntos = ;
       let line = new Konva.Line({
-          points: puntos,
+          points: [part.getPart().x(), part.getPart().y()],
           stroke: 'darkred',
-          strokeWidth: 2,
+          strokeWidth: 1.4,
           lineJoin: 'round',
           lineCap: 'round',
-          tension: 1
+          tension: 0.2
       });
-      layer.add(line);
 
 
       /* ANIMACIN PARTICULA */
@@ -159,6 +158,8 @@
           window.alert()
       }
       function startAnim() {
+          line.points([part.getPart().x(), part.getPart().y()]);
+          layer.add(line);
           anim.start();
       }
       function drawCampo(direccion) {
